[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/proto_dirt.png" type="Texture" id=1]
[ext_resource path="res://Barricade.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "proto",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.3333, 16.3333 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.5
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 80.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4

[node name="Barricade" type="Node2D" groups=["danger"]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.76837e-07, -0.5 )
scale = Vector2( 0.772727, 1.05 )
frames = SubResource( 1 )
animation = "proto"

[node name="Area2D" type="Area2D" parent="." groups=["danger"]]
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.17891e-07, 1.66667 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 30
one_shot = true
speed_scale = 3.0
explosiveness = 0.6
randomness = 0.52
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="deathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
